[tool.poetry]
name = "gitpod-python-node"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gitpod_python_node"}]

[tool.poetry.dependencies]
python = "^3.11"

[[tool.poetry.source]]
name = "codeartifact-prod"
url = "https://equipmentshare-696398453447.d.codeartifact.us-west-2.amazonaws.com/pypi/prod/simple/"
default = true

[[tool.poetry.source]]
name = "codeartifact-dev"
url = "https://equipmentshare-696398453447.d.codeartifact.us-west-2.amazonaws.com/pypi/dev/simple/"
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "gitpod_python_node.main:start"
